src/css/vertical-layout-light/_setting.scss
/* ... */
::-webkit-scrollbar-thumb:active {
  background: #525965;
}

::-webkit-scrollbar-track {
  background: transparent;
  border: 0px none #ffffff;
  border-radius: 50px;
}

::-webkit-scrollbar-track:hover {
  background: transparent;
}

::-webkit-scrollbar-track:active {
  background: transparent;
}

::-webkit-scrollbar-corner {
  background: transparent;
}


/*-----------------------------chiller-theme-------------------------------------------------*/

// .chiller-theme .sidebar-wrapper2 {
//     background: #31353D;
// }

// .chiller-theme .sidebar-wrapper2 .sidebar-header,
// .chiller-theme .sidebar-wrapper2 .sidebar-search,
// .chiller-theme .sidebar-wrapper2 .sidebar-menu {
//   //   border-top: 1px solid #3a3f48;
// }

.chiller-theme .sidebar-wrapper2 .sidebar-search input.search-menu,
.chiller-theme .sidebar-wrapper2 .sidebar-search .input-group-text {
  border-color: transparent;
  box-shadow: none;
}

.chiller-theme .sidebar-wrapper2 .sidebar-header .user-info .user-role,
.chiller-theme .sidebar-wrapper2 .sidebar-header .user-info .user-status,
.chiller-theme .sidebar-wrapper2 .sidebar-search input.search-menu,
.chiller-theme .sidebar-wrapper2 .sidebar-search .input-group-text,
.chiller-theme .sidebar-wrapper2 .sidebar-brand>a,
.chiller-theme .sidebar-wrapper2 .sidebar-menu ul li a,
.chiller-theme .sidebar-footer>a {
  color: #818896;
}

.chiller-theme .sidebar-wrapper2 .sidebar-menu ul li:hover>a,
.chiller-theme .sidebar-wrapper2 .sidebar-menu .sidebar-dropdown.active>a,
.chiller-theme .sidebar-wrapper2 .sidebar-header .user-info,
.chiller-theme .sidebar-wrapper2 .sidebar-brand>a:hover,
.chiller-theme .sidebar-footer>a:hover .i,
.chiller-theme .sidebar-footer>a:hover i {
  color: #fff;
}

.page-wrapper.chiller-theme.toggled #close-sidebar {
  color: #bdbdbd;
}

.page-wrapper.chiller-theme.toggled #close-sidebar:hover {
  color: #ffffff;
}

.chiller-theme .sidebar-wrapper2 ul li:hover a .i,
.chiller-theme .sidebar-wrapper2 ul li:hover a i,
.chiller-theme .sidebar-wrapper2 .sidebar-dropdown .sidebar-submenu li a:hover:before,
.chiller-theme .sidebar-wrapper2 .sidebar-search input.search-menu:focus+span,
.chiller-theme .sidebar-wrapper2 .sidebar-menu .sidebar-dropdown.active a i,
.chiller-theme .sidebar-wrapper2 .sidebar-menu .sidebar-dropdown.active a .i {
  color: #16c7ff;
  text-shadow: 0px 0px 10px rgba(22, 199, 255, 0.5);
}

.chiller-theme .sidebar-wrapper2 .sidebar-menu ul li a i {
  color: #fff;
}

.chiller-theme .sidebar-wrapper2 .sidebar-menu ul li a .i {
  color: #fff;
}

.jotform-sidebar {
  display: flex;
  align-items: center;

  // justify-content: space-around;
}

.chiller-theme .sidebar-wrapper2 .sidebar-menu .sidebar-dropdown div,
.chiller-theme .sidebar-wrapper2 .sidebar-search input.search-menu,
.chiller-theme .sidebar-wrapper2 .sidebar-search .input-group-text {
  background: #3a3f48;
}

.sidebars-name {
  font-size: 1rem;
  text-transform: uppercase;
  color: #ffffff !important;
  padding-bottom: 20px;
}

.chiller-theme .sidebar-wrapper2 .sidebar-menu .header-menu span {
  color: #fff;
}

.chiller-theme .sidebar-footer {
  background: #3a3f48;
  box-shadow: 0px -1px 5px #282c33;
  border-top: 1px solid #464a52;
}

.chiller-theme .sidebar-footer>a:first-child {
  border-left: none;
}

.chiller-theme .sidebar-footer>a:last-child {
  border-right: none;
}

.setting-form {
  padding: 104px 111px !important;
}

.form-setting-icon {
  width: 39px;
  padding: 7px;
  text-align: center;
  background: #dc143c;
  color: white;
  border-radius: 3px;
}

.form-setting-icon1 {
  width: 39px;
  padding: 7px;
  text-align: center;
  background: rgb(88, 185, 102);
  color: white;
  border-radius: 3px;
}

.form-setting-div {
  display: flex;
}

.form-setting-right-div {
  padding-left: 12px;
  padding-top: 1px;
  margin-left: 190px;
}

.form-setting-h1 {
  font-size: 18px;
  margin-bottom: 0;
}

.form-setting-p {
  font-size: 14px;
  margin-top: 2px;
}

.form-setting-main-div {
  width: 69%;
  background: #ffffff;
  border: 1px solid #f2f2f2;
  border-radius: 4px;
  box-shadow: inset 0 0 1px 0 #bfbfbf;
  margin-left: 190px;
}

.form-setting-title {
  font-size: 19px;
  margin-bottom: 2px;
}

.form-setting-para {
  font-size: 14px;
}

.form-setting-input {
  width: 100%;
  border: 1px solid #c5c5c5;
  border-radius: 4px !important;
  padding: 6px 12px;
  box-shadow: 0 2px 4px rgb(86 70 50 / 10%);
  border: 1px solid #d9cec1;
  color: #564632;
  font-family: inherit;
  line-height: 24px;
  font-size: 14px;
  display: inline-block;
  background-color: #fff;
  outline: 0;
}

.mainsetting-div {
  padding: 12px 27px 12px 26px;
}

.setting_form_ml {
  margin-left: 286px !important;
  // height: 100vh;
}

.show-more-btn {
  background: #dc143c;
  border: 1px solid #dc143c;
  color: #fff;
  border-radius: 4px;
  padding: 12px;
  padding-right: 25px;
  padding-left: 25px;
}

.thankyou-radio {
  width: 100%;
  box-shadow: 0 2px 2px rgb(87 100 126 / 21%);
  // background-color: #ffffff;
  padding: 12px 7px 31px 14px;
}

.ml_contain {
  margin-left: 80px;
}

.big_div {
  background-color: #c71d38;
  border-radius: 5px;
}

.col_6 {
  width: 700px;
}

.class_i {
  background-color: white;
  height: 30px;
  width: 30px;
  border-radius: 100%;
  color: #c71d38;
  display: flex;
  align-items: center;
  justify-content: center;
}

.font_comb {
  padding-left: 10px;
  display: flex;
  align-items: center;

}

.class_g {
  background-color: green;
  height: 40px;
  width: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 30px;
}

.paragraph {
  font-size: 13px;
}

.map {
  margin-left: 14px;
}

.pb {
  color: #78bb07;
  font-weight: 500;
  padding-left: 6px;
}

.border_width {
  width: 130px;
}

.link {
  margin-right: 12px;
}

.setting {
  color: #4573e3;
  margin-left: 8px;
}

._border {
  height: 1px;
  margin-top: 30px;
}

.font {
  font-size: 12px;
  width: 360px;
}

.parlanch {
  margin-left: 20px;
}
/* ... */

